# http_start

./: Dockerfile  index.html  main.py  message.html  pyproject.toml
storage/: data.json
