[tool.poetry]
name = "web-soket"
version = "0.1.0"
description = ""
authors = ["Serhii Nesterenko <sy.nesterenko@gmail.com>"]
readme = "README.md"
packages = [{include = "web_soket"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
